--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Cabeçalho / Menu de Navegação -->
     <header>
         <div class="logo">
-            <h2>Portfolio.</h2>
+            <h2>Portfólio.</h2>
         </div>
 
         <div class="hamburger">
