alterado img-home

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="home-image">
             <div class="wrapper-photo">
-                <img class="photo" src="./assets/IMG_3666 (6).JPG" alt="photo-side">
+                <img class="photo" src="./assets/IMG_5083.jpg" alt="photo-side">
             </div>
 
             <div class="links-social">
