--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         <div class="home-info">
             <h1>Olá sou</h1>
             <h1>Sidemar Silva</h1>
-            <h2>
-                Desenvolvedor Front End
-            </h2>
+            
+            <h2>Desenvolvedor Front End</h2>
 
             <div class="container-techs">
                 <h3>Techs :</h3>
